# kristall

./: .gitignore  Cargo.toml  README.md  incomplete.env
src/: client.rs  main.rs  speech_to_text.rs
