[package]
name = "kristall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
byteorder = "1.5.0"
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
cpal = "0.15.3"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
hound = "3.5.1"
once_cell = "1.19.0"
rodio = { version = "0.17.3", features = ["minimp3"] }
samplerate = "0.2.4"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
whisper-rs = { path = "../whisper-rs" }
